add package metadata

--- a/src/Timeline.Maui/Timeline.Maui.csproj
+++ b/src/Timeline.Maui/Timeline.Maui.csproj
@@ -1,6 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
+        <PackageId>rminato.timeline.maui</PackageId>
+        <Version>1.0.0</Version>
+        <Authors>Riccardo Minato</Authors>
+        <Title>Timeline.Maui</Title>
+        <Description>A simple to use package to draw timelines in .NET MAUI.</Description>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    </PropertyGroup>
+
+    <PropertyGroup>
         <TargetFrameworks>net9.0-android;net9.0-ios</TargetFrameworks>
 <!--        <TargetFrameworks>net8.0-android;net8.0-ios;net8.0-maccatalyst</TargetFrameworks>-->
 <!--        <TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net8.0-windows10.0.19041.0</TargetFrameworks>-->
